--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,7 @@
 spring.application.name=School_Management
 server.port=8081
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/school_management
-spring.datasource.username=root
-spring.datasource.password=root
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto = update
+spring.profiles.active=prod
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
